fix search bar alignment

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -105,7 +105,7 @@
 }
 
 #search-query {
-  position: relative;
+  // position: relative;
   margin-top: 0;
   margin-bottom: 0;
   border-right: none;
